[gd_scene load_steps=61 format=3 uid="uid://djwlm556wwhom"]

[ext_resource type="Script" uid="uid://bkahnoe843emt" path="res://Scripts/Enemy Scripts/BossMinion.gd" id="1_7ac2e"]
[ext_resource type="Texture2D" uid="uid://b2xwggpd1vctm" path="res://Assets/Sprites/Enemy Sprites/BossMinionSprite.png" id="1_qi420"]
[ext_resource type="Script" uid="uid://kni8wla78acm" path="res://Scripts/Laser Scripts/EnemyLaser.gd" id="2_0e3hw"]
[ext_resource type="AudioStream" uid="uid://dd7c65u7ttujj" path="res://Assets/Sound Design/SFX/Death SFX/Boss Minion SFX.wav" id="3_7os1t"]
[ext_resource type="Texture2D" uid="uid://dtawk0rxiyfw6" path="res://Assets/Still PIXELS/ENEMY SPERM LASER STILL.png" id="3_t1s0i"]
[ext_resource type="AudioStream" uid="uid://d1ef886jlby15" path="res://Assets/Sound Design/SFX/PlayerShootingSFX.wav" id="6_t1s0i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3pc01"]
radius = 14.444445
height = 64.44445

[sub_resource type="PackedScene" id="PackedScene_arcc6"]
_bundled = {
"conn_count": 3,
"conns": PackedInt32Array(1073741828, 1073741827, 16, 15, 2, 0, 0, 1073741830, 1073741829, 18, 17, 2, 0, 0, 1073741832, 1073741831, 20, 19, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("EnemyLaser", "Area2D", "scale", "collision_layer", "script", "Sprite2D", "Sprite2D", "scale", "texture", "CollisionShape2D", "CollisionShape2D", "shape", "VisibleOnScreenNotifier2D", "VisibleOnScreenNotifier2D", "position", "_on_area_entered", "area_entered", "_on_body_entered", "body_entered", "_on_visible_on_screen_notifier_2d_screen_exited", "screen_exited"),
"node_count": 4,
"node_paths": [NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("VisibleOnScreenNotifier2D")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 3, 2, 0, 3, 1, 4, 2, 0, 1073741824, 0, 6, 5, -1, 2, 7, 3, 8, 4, 0, 1073741825, 0, 10, 9, -1, 1, 11, 5, 0, 1073741826, 0, 13, 12, -1, 1, 14, 6, 0),
"variants": [Vector2(0.9, 0.9), 8, ExtResource("2_0e3hw"), Vector2(0.6, 0.6), ExtResource("3_t1s0i"), SubResource("CapsuleShape2D_3pc01"), Vector2(0, 40)],
"version": 3
}

[sub_resource type="AtlasTexture" id="AtlasTexture_1ai0r"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 0, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvpmc"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 0, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyn6o"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 0, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_m18dl"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 0, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrvau"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 0, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rnoq"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 640, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk3cd"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 640, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj0v2"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 640, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3ybj"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 640, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixelp"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 640, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u1yi"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 1280, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho2th"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 1280, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqfgs"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 1280, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqgqm"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 1280, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_32iqi"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 1280, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6jta"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 1920, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta3dq"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 1920, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r8to"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 1920, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbl42"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 1920, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_br0jo"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 1920, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1m01"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 2560, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct3oh"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 2560, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_us4mi"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 2560, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbxp8"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 2560, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5lew"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 2560, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_d65wf"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 3200, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynov5"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 3200, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_fassf"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 3200, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb2c7"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 3200, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb6su"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 3200, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s44i"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 3840, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndrpi"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 3840, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie280"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 3840, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2d5f"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 3840, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmynr"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 3840, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_mguc1"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 4480, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_twi2s"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 4480, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsxyd"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 4480, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_no26e"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 4480, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqrql"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 4480, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gkwf"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 5120, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_rf22d"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 5120, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6pn3"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 5120, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_xah5q"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 5120, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pqiw"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 5120, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_e13uj"]
atlas = ExtResource("1_qi420")
region = Rect2(0, 5760, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukhtj"]
atlas = ExtResource("1_qi420")
region = Rect2(1138, 5760, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6wik"]
atlas = ExtResource("1_qi420")
region = Rect2(2276, 5760, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh8i8"]
atlas = ExtResource("1_qi420")
region = Rect2(3414, 5760, 1138, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_gff34"]
atlas = ExtResource("1_qi420")
region = Rect2(4552, 5760, 1138, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_d43li"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ai0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvpmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyn6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m18dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrvau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rnoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk3cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj0v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3ybj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixelp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u1yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho2th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqfgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqgqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32iqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6jta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta3dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r8to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbl42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br0jo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1m01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct3oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us4mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbxp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5lew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d65wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynov5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fassf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb2c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb6su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s44i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndrpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie280")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2d5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmynr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mguc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twi2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsxyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no26e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqrql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gkwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rf22d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xah5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pqiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e13uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukhtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6wik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh8i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gff34")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gnq6y"]
radius = 58.872746

[node name="BossMinion" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_7ac2e")
laser_scene = SubResource("PackedScene_arcc6")
speed = 100
hp = 5
points = 50
death_sound = ExtResource("3_7os1t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_d43li")
autoplay = "default"
frame_progress = 0.5993832

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -7)
shape = SubResource("CircleShape2D_gnq6y")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1, -74)

[node name="FireTimer" type="Timer" parent="."]

[node name="ShootingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_t1s0i")
pitch_scale = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
